<resources>
    <string name="app_name">Cadastro de Garças</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="teste">String teste</string>
    <string name="login">Login</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="cadastrar_cliente">Cadastrar Cliente</string>
    <string name="cadastro_garca">Cadastro de Garças e Gaivotas</string>
    <string name="cadastro_nome">Name of garca</string>
    <string name="cadastro_idade">Age of garca</string>
    <string name="cadastro_endereco">Addres of Garca</string>
    <string name="cadastro_telefone">Phone of Garca</string>
    <string name="cadastro_peso">Weight</string>
    <string name="save">Save</string>
</resources>
